<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="app_name">Letrinhas02</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="entrar">Entrar</string>
    <string name="Menu">Menu</string>
    <string name="letrinhas">Letrinhas 0.2 betta</string>
    <string name="Recording">A gravar</string>
    <string name="start">Começar</string>
    <string name="stop">Parar</string>
    <string name="play">Ouvir</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_activity_escolhe_teste">Escolher Teste</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="sair">sair</string>
    <string name="voltar">voltar</string>
    <string name="teste">teste</string>
    <string name="title_activity_esc_modo">Escolher Modo do teste</string>
    <string name="escolhe_Modo">Escolher o Modo do teste a realizar</string>
    <string name="porAluno">Por Aluno</string>
    <string name="porProf">Por Professor</string>
    <string name="title_activity_leitura_texto">Leitura de Textos</string>
    <string name="title_activity_leitura_palavras">Leitura de Palavras</string>
    <string name="concetList">ConectList</string>
    <string name="title_activity_texto">Teste de texto</string>
    <string name="title_activity_teste_texto">Teste de texto</string>
    <string name="title_activity_teste__imagem">Teste de Imagem</string>
    <string name="title_activity_teste__palavras">Teste_Palavras</string>
    <string name="title_activity_teste__poema">Teste de Poema</string>
    <string name="login_title">Login Screen</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="title_activity_autenticacao">Autenticacao</string>
    <string name="exemploTexto"> Atirei o pau ao gato to\n 
        Mas o gato to\n 
        Não morreu eu eu\n 
        A Dona Chica ca\n 
        Assustou-se se\n 
        Com o berro, com o berro\n 
        Que o gato deu\n 
        Miau !!!\n \n \n 
        Sentado na chaminé é é!\n 
        Veio uma pulga ga,\n 
        morder-lhe o pé é é!\n 
        Ou ele chora ra,\n 
        ou ele grita ta:\n 
        -Vai-te embora!\n 
        -Pulga Maldita!!!</string>
    <string name="min">minutos</string>
    <string name="sec">seg</string>
    <string name="vacilar">Vacilações</string>
    <string name="fragment">Fragmentações</string>
    <string name="silabac">Silabações</string>
    <string name="repeti">Repetições</string>

</resources>
