<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/escModo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    android:configChanges="orientation|keyboardHidden|screenSize"
    android:gravity="center_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:screenOrientation="landscape"
    tools:context="com.letrinhas02.EscModo" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/esmCabecalho"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/escmVoltar"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/escmRodape"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/letrinhas"
            android:textColor="#5ddfff"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/escmVoltar"
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:contentDescription="@string/voltar"
        android:src="@drawable/voltar" />

    <ImageButton
        android:id="@+id/ecmAluno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/esmCabecalho"
        android:layout_below="@+id/esmCabecalho"
        android:layout_marginLeft="162dp"
        android:layout_marginTop="128dp"
        android:contentDescription="@string/porAluno"
        android:src="@drawable/boy" />

    <TextView
        android:id="@+id/tvmoAluno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/esmCabecalho"
        android:layout_below="@+id/ecmAluno"
        android:layout_marginLeft="162dp"
        android:text="@string/porAluno"
        android:textColor="#5ddfff"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvmoProf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/esmProf"
        android:layout_below="@+id/esmProf"
        android:text="@string/porProf"
        android:textColor="#5ddfff"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/esmCabecalho"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="50dp"
        android:drawableLeft="@drawable/logo2"
        android:drawablePadding="31dp"
        android:text="@string/escolhe_Modo"
        android:textColor="#5ddfff"
        android:textSize="50sp"
        android:textStyle="bold" />

    <ImageButton
        android:id="@+id/esmProf"
        android:layout_width="215dp"
        android:layout_height="205dp"
        android:layout_alignRight="@+id/linearLayout1"
        android:layout_alignTop="@+id/ecmAluno"
        android:layout_marginRight="103dp"
        android:contentDescription="@string/porProf"
        android:src="@drawable/docentes" />

</RelativeLayout>