<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/escTeste"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    android:configChanges="orientation|keyboardHidden|screenSize"
    android:gravity="center_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:screenOrientation="landscape"
    tools:context="com.letrinhas02.EscolheTeste" >

    <ScrollView
        android:id="@+id/svEscolher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/escTVoltar"
        android:layout_alignLeft="@+id/escTRodape"
        android:layout_below="@+id/esTCabecalho"
        android:layout_toLeftOf="@+id/escTVoltar"
        android:background="@color/black_overlay" >

        <LinearLayout
            android:id="@+id/llescteste"
            android:layout_width="match_parent"
            android:layout_height="457dp"
            android:orientation="vertical" >

            <ToggleButton
                android:id="@+id/ToggleButton1"
                android:layout_width="match_parent"
                android:layout_height="83dp"
                android:text="@string/teste"
                android:textOff="@string/teste"
                android:textOn="@string/teste"
                android:textSize="32sp"
                android:textStyle="normal" />
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/escTRodape"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/svEscolher"
        android:text="@string/letrinhas"
        android:textColor="#5ddfff"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/esTLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/escTVoltar"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="25dp"
        android:contentDescription="@string/teste"
        android:src="@drawable/index" />

    <ImageButton
        android:id="@+id/ibComecar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/esTLogo"
        android:layout_below="@+id/esTLogo"
        android:contentDescription="@string/start"
        android:clickable="true"
        android:onClick="executarTestes"
        android:src="@drawable/right" />

    <ImageButton
        android:id="@+id/escTVoltar"
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="39dp"
        android:layout_marginRight="33dp"
        android:contentDescription="@string/voltar"
        android:onClick="voltar"
        android:src="@drawable/voltar" />

    <TextView
        android:id="@+id/esTCabecalho"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/svEscolher"
        android:layout_alignTop="@+id/esTLogo"
        android:drawableLeft="@drawable/logo2"
        android:text="@string/title_activity_escolhe_teste"
        android:textColor="#5ddfff"
        android:textSize="50sp"
        android:textStyle="bold" />

</RelativeLayout>