<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="clip_vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="30sp"
    android:paddingRight="30sp"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="Testes$Teste_texto" >

    <TextView
        android:id="@+id/textCabecalho"
        android:layout_width="213dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:drawableLeft="@drawable/logo2"
        android:text="@string/teste"
        android:textColor="#5ddfff"
        android:textSize="50sp"
        android:textStyle="bold" />

    <ImageButton
        android:id="@+id/txtRecord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/textCabecalho"
        android:src="@drawable/record" />

    <ImageButton
        android:id="@+id/txtVoltar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:src="@drawable/voltar" />

    <TextView
        android:id="@+id/escmRodape"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/txtVoltar"
        android:layout_marginLeft="32dp"
        android:layout_toRightOf="@+id/txtVoltar"
        android:text="@string/letrinhas"
        android:textColor="#5ddfff"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ImageButton
        android:id="@+id/txtPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/txtRecord"
        android:layout_below="@+id/textCabecalho"
        android:src="@drawable/palyoff" />

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/scrollView1"
        android:layout_alignRight="@+id/txtPlay"
        android:paddingLeft="10dp" >

        <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#000000" >

            <Chronometer
                android:id="@+id/cromTxt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#000000"
                android:gravity="right"
                android:paddingLeft="10sp"
                android:paddingRight="10sp"
                android:textColor="#50ff50"
                android:textSize="40sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/lgdmin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#505050"
                android:text="@string/min"
                android:textColor="#eeeeee"
                android:textSize="35sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lgdseg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#505050"
                android:text="@string/sec"
                android:textColor="#eeeeee"
                android:textSize="35sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vacilar"
                android:textSize="30sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <ImageButton
                android:id="@+id/ImageButton01"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@style/AppTheme"
                android:src="@drawable/menos" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="20"
                android:textColor="#ff2020"
                android:textSize="30sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/ImageButton02"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@style/AppTheme"
                android:src="@drawable/mais" />
        </TableRow>

        <TableRow
            android:id="@+id/TableRow01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment"
                android:textSize="30sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:id="@+id/TableRow02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <ImageButton
                android:id="@+id/ImageButton03"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@style/AppTheme"
                android:src="@drawable/menos" />

            <TextView
                android:id="@+id/TextView02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="20"
                android:textColor="#ff2020"
                android:textSize="30sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/ImageButton04"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@style/AppTheme"
                android:src="@drawable/mais" />
        </TableRow>

        <TableRow
            android:id="@+id/TableRow04"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/TextView04"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/silabac"
                android:textSize="30sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:id="@+id/TableRow03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <ImageButton
                android:id="@+id/ImageButton06"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@style/AppTheme"
                android:src="@drawable/menos" />

            <TextView
                android:id="@+id/TextView03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="20"
                android:textColor="#ff2020"
                android:textSize="30sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/ImageButton05"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@style/AppTheme"
                android:src="@drawable/mais" />
        </TableRow>

        <TableRow
            android:id="@+id/TableRow05"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/TextView05"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/repeti"
                android:textSize="30sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:id="@+id/TableRow06"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <ImageButton
                android:id="@+id/ImageButton08"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@style/AppTheme"
                android:src="@drawable/menos" />

            <TextView
                android:id="@+id/TextView06"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="20"
                android:textColor="#ff2020"
                android:textSize="30sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/ImageButton07"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@style/AppTheme"
                android:src="@drawable/mais" />
        </TableRow>

        <TableRow
            android:id="@+id/TableRow07"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/TextView07"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp" />
        </TableRow>

    </TableLayout>

    <ImageButton
        android:id="@+id/txtAvaliar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/escmRodape"
        android:layout_alignRight="@+id/tableLayout1"
        android:background="@style/AppTheme"
        android:src="@drawable/valido" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txtVoltar"
        android:layout_alignLeft="@+id/textCabecalho"
        android:layout_alignTop="@+id/txtPlay"
        android:layout_marginLeft="21dp"
        android:layout_toLeftOf="@+id/tableLayout1"
        android:background="#ccccff"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/txtTexto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="fill"
                android:text="@string/exemploTexto"
                android:textSize="35sp" />

        </LinearLayout>
    </ScrollView>

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tableLayout1"
        android:layout_alignTop="@+id/txtAvaliar"
        android:background="@style/AppTheme"
        android:src="@drawable/cancelar" />

</RelativeLayout>